--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                     <a href="#contact" class="btn btn--stroke full-width">Hire Me</a>
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="Boitmelo Moshodi resume (5).pdf" class="btn btn--primary full-width">Download CV</a>
+                    <a href="Boitmelo Moshodi resume (6).pdf" class="btn btn--primary full-width" download>Download CV</a>
+
                 </div>
             </div>
 
