--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                                 <img src="Store.png" 
                                      srcset="" alt="">
                             </a>
-                            <a href="https:0#" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https:https://ecom-mographics.vercel.app/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
