--- a/index.html
+++ b/index.html
@@ -442,8 +442,9 @@
     
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                MoGraphics Portfolio
-                            </h4>
+    <a href="https://yourportfolio.com" target="_blank" rel="noopener noreferrer">MoGraphics Portfolio</a>
+</h4>
+
                             <p class="item-folio__cat">
                                 Branding
                             </p>
