--- a/index.html
+++ b/index.html
@@ -467,9 +467,10 @@
                             <a href="https://website-gall.vercel.app/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
-                            <h4 class="item-folio__title">
-                                Gallery
-                            </h4>
+                          <h4 class="item-folio__title">
+    <a href="https://yourportfolio.com" target="_blank" rel="noopener noreferrer"> Gallery</a>
+</h4>
+
                             <p class="item-folio__cat">
                                 Web gallery 
                             </p>
