--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-    <a href="https://ecom-mographics.vercel.app/" target="_blank" rel="noopener noreferrer">MoGraphics Portfolio</a>
+    <a href="https://mographics.vercel.app//" target="_blank" rel="noopener noreferrer">MoGraphics Portfolio</a>
 </h4>
 
                             <p class="item-folio__cat">
